; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/kinesis/alvicstep/extr_alvicstep.c_blink_all_leds.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/kinesis/alvicstep/extr_alvicstep.c_blink_all_leds.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @blink_all_leds() #0 {
  %1 = call i32 (...) @all_led_on()
  %2 = call i32 @_delay_ms(i32 500)
  %3 = call i32 (...) @all_led_off()
  %4 = call i32 @_delay_ms(i32 100)
  %5 = call i32 (...) @caps_lock_led_on()
  %6 = call i32 @_delay_ms(i32 100)
  %7 = call i32 (...) @num_lock_led_on()
  %8 = call i32 @_delay_ms(i32 100)
  %9 = call i32 (...) @scroll_lock_led_on()
  %10 = call i32 @_delay_ms(i32 100)
  %11 = call i32 (...) @keypad_led_on()
  %12 = call i32 @_delay_ms(i32 100)
  %13 = call i32 (...) @scroll_lock_led_on()
  %14 = call i32 @_delay_ms(i32 100)
  %15 = call i32 (...) @num_lock_led_on()
  %16 = call i32 @_delay_ms(i32 100)
  %17 = call i32 (...) @caps_lock_led_on()
  %18 = call i32 @_delay_ms(i32 100)
  %19 = call i32 (...) @all_led_off()
  ret void
}

declare dso_local i32 @all_led_on(...) #1

declare dso_local i32 @_delay_ms(i32) #1

declare dso_local i32 @all_led_off(...) #1

declare dso_local i32 @caps_lock_led_on(...) #1

declare dso_local i32 @num_lock_led_on(...) #1

declare dso_local i32 @scroll_lock_led_on(...) #1

declare dso_local i32 @keypad_led_on(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
